# graphql-engine-profiling-demo

./: .gitmodules  README.md  docker-compose.yml
bench/: Dockerfile  run-bench.sh
engine/: base.Dockerfile  main.Dockerfile  run-engine.sh
engine/eventlog-influxdb/: Main.hs  cabal.project  eventlog-influxdb.cabal  hie.yaml
grafana/dashboards/: heap-stats.json
grafana/datasources/: influxdb.yaml  influxdb.yml
